ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Involved_Party__c/Involved_Party__c.object-meta.xml
<CustomObject>
    <label>Involved Party</label>
    <nameField>
        <displayFormat>IP-{0000}</displayFormat>
        <label>Involved Party Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Involved Parties</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>