ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Involved_Party__c/fields/Involved_Party__c.field-meta.xml
<CustomField>
    <fullName>Involved_Party__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Please select Architect, Consultant, Contractor or Spec Writer.</inlineHelpText>
    <label>Involved Party</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Contractor, Other, Designer, Distributor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Involved Parties (Involved Party)</relationshipLabel>
    <relationshipName>Involved_Parties1</relationshipName>
    <type>Lookup</type>
</CustomField>